2017-10-29	"a.out is a misspelling of the French word for ... August." (6)

		infra/travis-install-deps.sh :
		- bumped tag to download ia16-elf-* from, again

2017-10-14	"a.out is a misspelling of the French word for ... August." (5)

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/omg.h :
		- ia16-elf code may now emit real-mode i80286 instructions
		  such as `sgdt' if it sees compiler macro __IA16_ARCH_I80286

2017-10-13	"a.out is a misspelling of the French word for ... August." (4)

		infra/travis-install-deps.sh :
		- bumped pre-release (tag) to download ia16-elf-* et al. from

2017-09-12	Very minor change...

		.gitignore :
		- added build-ia16-redist.tar.xz

2017-08-21	"a.out is a misspelling of the French word for ... August." (3)

		configure ,
		GNUmakefile :
		- now unpacks files from infra/KeccakCodePackage.tar.xz at
		  build time, not at configuration time

2017-08-20	Travis testing for ia16-elf target. (!)

		.travis.yml :
		- added test setups for ia16-elf

		configure :
		- now always unpacks infra/KeccakCodePackage.tar.xz

		infra/travis-install-deps.sh :
		- now downloads ia16-elf-*, dosemu, and dos2unix, for
		  ia16-elf target

		infra/travis-build-and-check.sh :
		- now properly sets up environment for ia16-elf target

		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/epic.cc ,
		share/innocent-pear/calm.cc :
		- gcc wrapper now handles subcommands of the form
		  `ia16-elf-as' etc.

		KeccakCodePackage/ :
		- removed as a Git submodule; now sticking to the version in
		  infra/KeccakCodePackage.tar.xz

		lolwutconf/ :
		- bumped to e38a51a4e0

		infra/lolwutconf.tar.xz :
		- updated

2017-08-19	"a.out is a misspelling of the French word for ... August." (2)

		configure ,
		.travis.yml :
		- optimize for size rather than speed, for host and target

2017-08-18	"a.out is a misspelling of the French word for ... August."

		GNUmakefile :
		- fixed a bug in `make install'

		infra/travis-build-and-check.sh :